@@ -1,6 +1,6 @@
 What is the PHP/Java bridge?
 
-	 The PHP/Java bridge allows one to access java based
+         The PHP/Java bridge allows one to access java based
          applications running in a java application server running 
          on the local host.  The PHP/Java bridge communicates with 
          the application server through local sockets using an 
@@ -9,73 +9,73 @@ What is the PHP/Java bridge?
          Each client process communicates with a corresponding thread 
          spawned by the running application server.
 
-	 If the bridge detects that a java application server is not
-	 already running, it starts one to serve further requests.
+         If the bridge detects that a java application server is not
+         already running, it starts one to serve further requests.
 
-	 There is one example provided: test.php.  You can either invoke
-	 the test.php by typing ./test.php or copy the example into the
-	 document root of you web-server and invoke the file using the
-	 browser.
+         There is one example provided: test.php.  You can either invoke
+         the test.php by typing ./test.php or copy the example into the
+         document root of you web-server and invoke the file using the
+         browser.
 
-	 The PHP/Java bridge is meant as a replacement for the ext/java
+         The PHP/Java bridge is meant as a replacement for the ext/java
          bridge shipped with PHP 4.  It is not possible to run the 
          build-in bridge and the PHP/Java bridge at the same time.
 
 
 Build and execution instructions:
 
-	  In the directory php-java-bridge_1.x.y type:
+          In the directory php-java-bridge_1.x.y type:
 
-	  php --version  # must be PHP 4.3.2 or above!
-	  phpize && ./configure --with-java=/opt/IBMJava2-141/ && make
+          php --version  # must be PHP 4.3.2 or above!
+          phpize && ./configure --with-java=/opt/IBMJava2-141/ && make
 
-	  su <password>
-	  make install
+          su <password>
+          make install
 
-	  and then activate the extension by adding the following lines to
-	  the php.ini or add a file java.ini to the directory that
-	  contains the php module descriptions (usually /etc/php.d/) with
-	  the following content:
+          and then activate the extension by adding the following lines to
+          the php.ini or add a file java.ini to the directory that
+          contains the php module descriptions (usually /etc/php.d/) with
+          the following content:
 
-	  extension = java.so
-	  [java]
-	  java.log_level=5
-	  java.log_file=/tmp/java.log
-	  #java.socketname=/tmp/.php_java
+          extension = java.so
+          [java]
+          java.log_level=5
+          java.log_file=/tmp/java.log
+          #java.socketname=/tmp/.php_java
 
-	  After the module is activated, verify that the module is running
-	  by typing:
+          After the module is activated, verify that the module is running
+          by typing:
 
-	  echo "<?php phpinfo()?>" | php | fgrep "java status"
+          echo "<?php phpinfo()?>" | php | fgrep "java status"
 
-	  If you want to test the extension in the Web-Server, you must
-	  restart the Web-Server after you have installed the extension.
+          If you want to test the extension in the Web-Server, you must
+          restart the Web-Server after you have installed the extension.
 
-	  This module has been tested on a Mandrake Linux System (Version
-	  9.2), on RedHat Enterprise 3, RedHat Fedora Core 1 and 2, but 
+          This module has been tested on a Mandrake Linux System (Version
+          9.2), on RedHat Enterprise 3, RedHat Fedora Core 1 and 2, but 
           it should run on all Unix-like operating systems including 
           Solaris, Mac.   
 
-	  However, the extension currently does not compile on systems
-	  which do not support fork()/exec().  On these systems you must
-	  disable the code in bind.c and start the java application server
-	  yourself.  Fortunately all modern operating systems -- except
-	  Windows -- support fork()/exec()
+          However, the extension currently does not compile on systems
+          which do not support fork()/exec().  On these systems you must
+          disable the code in bind.c and start the java application server
+          yourself.  Fortunately all modern operating systems -- except
+          Windows -- support fork()/exec()
 
 
-	  Other configuration options which should have been set up by the
-	  configure script but which can be changed later are:
+          Other configuration options which should have been set up by the
+          configure script but which can be changed later are:
 
-	  java.libpath   = <system dependent path to natcJavaBridge.so>
-	  java.classpath = <system dependent path to JavaBridge.class>
-	  java.java_home = <system dependent path to the java install dir>
-	  java.java      = <system dependent path to the java binary>
-	  java.socketname= <hard-coded socketname for debugging>
+          java.libpath   = <system dependent path to natcJavaBridge.so>
+          java.classpath = <system dependent path to JavaBridge.class>
+          java.java_home = <system dependent path to the java install dir>
+          java.java      = <system dependent path to the java binary>
+          java.socketname= <hard-coded socketname for debugging>
 
-	  If you change the above values, please fist look at the output
-	  of phpinfo() so see the original values.
+          If you change the above values, please fist look at the output
+          of phpinfo() so see the original values.
 
-	  For debugging you can also start a external java application 
+          For debugging you can also start a external java application 
           with the following command:
 
             JAVA_HOME=<java.home> <java.home>/bin/java \
@@ -84,19 +84,19 @@ Build and execution instructions:
                                         -Djava.awt.headless=true  
                                         JavaBridge 
                                         <java.socketname>
-	                                <loglevel>
+                                        <loglevel>
                                         <log-file>
 
-	  For example in a gnome-terminal type:
+          For example in a gnome-terminal type:
 
             JAVA_HOME=/opt/jdk1.4 $JAVA_HOME/bin/java \
                     -Djava.library.path=/usr/lib/php4 \
                     -Djava.class.path  =/usr/lib/php4 \
-	            -Djava.awt.headless=true \
+                    -Djava.awt.headless=true \
                      JavaBridge \
                      /tmp/.php_java \ 
                      5 \
-	             "" | tee /tmp/java.log
+                     "" | tee /tmp/java.log
 
          Then point the bridge to the socket /tmp/.php_java by 
          hard-coding the java.socketname to /tmp/.php_java and
@@ -105,7 +105,7 @@ Build and execution instructions:
 ------------------------------------
          QUICK INSTALL:
 
-	   su - -c "service httpd stop"
+           su - -c "service httpd stop"
            INST=/usr/local
 
            gunzip < httpd_2.x.y.tar.gz | tar xf -
@@ -117,13 +117,13 @@ Build and execution instructions:
            bunzip2 < php-4.3.x.tar.bz2 | tar xf -
            cd php-4.3.x
            ./configure --prefix=$INST \
-	               --with-mysql \
+                       --with-mysql \
                        --without-java \
                        --with-apxs2=$INST/bin/apxs
            make && su -c "make install"
            # now activate php in the httpd.conf
-	   su -c "echo 'AddType application/x-httpd-php .php' >>$INST/conf/httpd.conf"
-	   cd ..
+           su -c "echo 'AddType application/x-httpd-php .php' >>$INST/conf/httpd.conf"
+           cd ..
 
            bunzip2 < php-java-bridge_1.x.y.tar.bz2 | tar xf -
            cd php-java-bridge_1.x.y
@@ -137,19 +137,19 @@ Build and execution instructions:
            su -c "touch $INST/lib/php.ini && echo -e 'extension=java.so\n[java]' >>$INST/lib/php.ini"
            cd ..
 
-	   # test
-	   su -c "echo '<?php phpinfo() ?>' >$INST/htdocs/phpinfo.php; chmod +xr $INST/htdocs/phpinfo.php; apachectl restart"
+           # test
+           su -c "echo '<?php phpinfo() ?>' >$INST/htdocs/phpinfo.php; chmod +xr $INST/htdocs/phpinfo.php; apachectl restart"
 
-	   # checking cli
-	   echo '<?php phpinfo() ?>' | php | fgrep "java status"
+           # checking cli
+           echo '<?php phpinfo() ?>' | php | fgrep "java status"
 
-	   # checking web
-  	   wget -olog -O-  http://localhost/phpinfo.php|fgrep "java status"
+           # checking web
+             wget -olog -O-  http://localhost/phpinfo.php|fgrep "java status"
  
-	   
+           
 ------------------------------------
 
-	
+        
    This module is based on the ext/java module written by Sam Ruby.
    His original comments follow.
 
@@ -179,15 +179,15 @@ Build and execution instructions:
 
      5) Overload resolution is in general a hard problem given the
         differences in types between the two languages.  The PHP Java
-	extension employs a simple, but fairly effective, metric for
-	determining which overload is the best match.  
+        extension employs a simple, but fairly effective, metric for
+        determining which overload is the best match.  
 
-	Additionally, method names in PHP are not case sensitive, potentially
-	increasing the number of overloads to select from.
+        Additionally, method names in PHP are not case sensitive, potentially
+        increasing the number of overloads to select from.
 
-	Once a method is selected, the parameters are cooerced if necessary, 
-	possibly with a loss of data (example: double precision floating point
-	numbers will be converted to boolean).
+        Once a method is selected, the parameters are cooerced if necessary, 
+        possibly with a loss of data (example: double precision floating point
+        numbers will be converted to boolean).
 
      6) In the tradition of PHP, arrays and hashtables may pretty much
         be used interchangably.  Note that hashtables in PHP may only be
